# DKG-playground-polkadot-sdk

./: Cargo.toml
polkadot/node/network/availability-distribution/src/: lib.rs
polkadot/node/network/availability-distribution/src/pov_requester/: mod.rs
polkadot/node/network/bridge/src/tx/: mod.rs
polkadot/node/network/dkg/: Cargo.toml
polkadot/node/network/dkg/src/: lib.rs
polkadot/node/network/protocol/src/request_response/: mod.rs  outgoing.rs  v2.rs
polkadot/node/overseer/src/: dummy.rs  lib.rs
polkadot/node/service/: Cargo.toml
polkadot/node/service/src/: lib.rs  overseer.rs
polkadot/node/subsystem-types/src/: messages.rs
substrate/client/dkg/: Cargo.toml
substrate/client/dkg/src/: lib.rs
substrate/client/dkg/src/communication/: mod.rs
