[package]
name = "dkg"
description = "DKG Gadget for Substrate"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"

[dependencies]
array-bytes = "6.2.2"
sc-network = { path = "../network" }
sp-runtime = { path = "../../primitives/runtime" }

[lints]
workspace = true
